--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="https://www.instagram.com/ankit_gamer69/"><i class="fa fa-instagram"
                             aria-hidden="true"></i></a>
                     <a href="https://www.linkedin.com/in/ankitrajdev"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a href="https://github.com/ankitrajdev"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a href="https://andersoncode-dev.github.io/MiportafolioPersonal/"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
             </div>
             <div class="main-content-image">
