--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                     <button class="btn main-btn" onclick="contact();">Contacto</button>
                 </div>
                 <div class="main-content-text-social">
-                    <a href="https://www.instagram.com/ankit_gamer69/"><i class="fa fa-instagram"
+                    <a href="https://www.instagram.com/restringidooo/"><i class="fa fa-instagram"
                             aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/ankitrajdev"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a href="https://andersoncode-dev.github.io/MiportafolioPersonal/"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a href="www.linkedin.com/in/anderson-jeanpool-navarro-viera"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="https://github.com/AndersonCode-Dev"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
             </div>
             <div class="main-content-image">
@@ -342,17 +342,16 @@
             </div>
             <div class="footer_upper_div">
                 <h3>Contacto</h3>
-                <a class="flex align-centre gap5" href="tel:9110155364"><span><i class="fa fa-phone-square"
-                            aria-hidden="true"></i></span>9292929292</a>
-                <a class="flex align-centre gap5" href="mailto:ankit_gamer69@hotmail.com">
+                <a class="flex align-centre gap5" href="tel:993014204"><span><i class="fa fa-phone-square"
+                            aria-hidden="true"></i></span>993014204</a>
+                <a class="flex align-centre gap5" href="mailto:andersonnavarroviera@gmail.com">
                     <span><i class="fa fa-envelope" aria-hidden="true"></i></span>andersonnavarroviera@hotmail.com</a>
                 <div class="footer_upper_div_4_social">
                     <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a href="https://github.com/ankitrajdev"><i class="fa fa-github" aria-hidden="true"></i></a>
-                    <a href="https://www.instagram.com/ankit_gamer69/"><i class="fa fa-instagram"
+                    <a href="https://github.com/AndersonCode-Dev"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a href="hhttps://www.instagram.com/restringidooo/"><i class="fa fa-instagram"
                             aria-hidden="true"></i></a>
-                    <a href="https://wa.me/9110155364"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-                    <a href="https://youtube.com/@ankit_gamer69"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+                    <a href="https://wa.me/993014204"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                     <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     <a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
                     <a href=""><i class="fa fa-snapchat" aria-hidden="true"></i></a>
@@ -363,10 +362,10 @@
         <hr>
         <div class="footer_lower">
             <div class="main-content-text-social footer-social-lower">
-                <a href="https://www.instagram.com/ankit_gamer69/"><i class="fa fa-instagram"
+                <a href="hhttps://www.instagram.com/restringidooo/"><i class="fa fa-instagram"
                         aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                <a href="https://github.com/ankitrajdev"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="www.linkedin.com/in/anderson-jeanpool-navarro-viera"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://github.com/AndersonCode-Dev"><i class="fa fa-github" aria-hidden="true"></i></a>
             </div>
             <div class="footer_lower_text">
                 <p>&copy;<a href="#">Anderson Navarro</a> | Reservados todos los derechos.</p>
